# libwsc

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
CMake/: FindLibevent.cmake
docs/: BUILDING.md  OPTIONS.md
examples/: autobahn.cpp  threads.cpp
libwsc/: Logger.h  Utf8Validator.cpp  Utf8Validator.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketHeaders.h  WebSocketTLSOptions.h  sha1.hpp
